cluster/apps/bentopdf/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bentopdf
  namespace: bentopdf
spec:
  selector:
    app: bentopdf
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
